--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,4 @@
-    /* Reset básico */
+
     * {
         margin: 0;
         padding: 0;
@@ -28,8 +28,8 @@
         display: flex;
         justify-content: center;
         gap: 15px;
-        max-width: 600px; /* Define uma largura máxima para centralizar */
-        margin: 0 auto; /* Centraliza o menu horizontalmente */
+        max-width: 600px; 
+        margin: 0 auto; 
         padding: 0;
     }
 
@@ -41,7 +41,7 @@
 
     header nav {
         display: flex;
-        justify-content: center; /* Centraliza o nav em todo o header */
+        justify-content: center; 
     }
 
     header nav ul li a:hover {
@@ -52,13 +52,13 @@
     .home {
         padding: 20px;
         text-align: center;
-        background-color: rgb(192, 117, 51); /* Cor de fundo, ajuste conforme necessário */
-        color: #333; /* Cor do texto */
+        background-color: rgb(192, 117, 51); 
+        color: #333; 
     }
 
     .home p {
         font-size: 1rem;
-        color: #555; /* Cor do texto */
+        color: #555;
     }
 
     .home h2 {
@@ -177,7 +177,7 @@
 body {
 background-color: #f5f5f5;
 color: #333;
-transition: background-color 0.3s, color 0.3s; /* Transição suave */
+transition: background-color 0.3s, color 0.3s;
 }
 
 /* Botão para alternar o modo */
@@ -209,7 +209,7 @@ padding: 10px 15px;
 border-radius: 5px;
 cursor: pointer;
 font-size: 1rem;
-z-index: 1000; /* Fica sempre visível */
+z-index: 1000; 
 }
 
 #darkModeToggle:hover {
@@ -222,7 +222,6 @@ background-color: #121212;
 color: #f5f5f5;
 }
 
-/* Ajustes para outros elementos no modo escuro */
 header.dark-mode, footer.dark-mode {
 background-color: #222;
 }
